--- a/apps/web/public/locales/es/translation.json
+++ b/apps/web/public/locales/es/translation.json
@@ -1,8 +1,9 @@
 {
   "closed": "cerrado",
-  "english": "inglés",
   "language": "idioma",
   "noData": "sin datos",
   "open": "abierto",
-  "spanish": "español"
+  "light": "luz",
+  "dark": "oscuro",
+  "system": "sistema"
 }
