--- a/apps/web/public/locales/en/translation.json
+++ b/apps/web/public/locales/en/translation.json
@@ -1,8 +1,9 @@
 {
   "closed": "closed",
-  "english": "english",
   "language": "language",
   "noData": "no data",
   "open": "open",
-  "spanish": "spanish"
+  "light": "light",
+  "dark": "dark",
+  "system": "system"
 }
