--- a/apps/web/src/libs/i18next/locales/es.json
+++ b/apps/web/src/libs/i18next/locales/es.json
@@ -1,9 +1,9 @@
 {
-  "closed": "cerrado",
-  "language": "idioma",
-  "noData": "sin datos",
-  "open": "abierto",
-  "light": "luz",
-  "dark": "oscuro",
-  "system": "sistema"
+  "Closed": "Cerrado",
+  "Language": "Idioma",
+  "NoData": "Sin datos",
+  "Open": "Abierto",
+  "Light": "Luz",
+  "Dark": "Oscuro",
+  "System": "Sistema"
 }
