--- a/apps/web/src/libs/i18next/locales/en.json
+++ b/apps/web/src/libs/i18next/locales/en.json
@@ -1,6 +1,8 @@
 {
   "language": "Language",
   "noData": "No data",
+  "settings": "Settings",
+  "mode": "Mode",
   "status": {
     "open": "Open",
     "closed": "Closed"
