--- a/apps/web/src/libs/i18next/locales/es.json
+++ b/apps/web/src/libs/i18next/locales/es.json
@@ -1,6 +1,8 @@
 {
   "language": "Idioma",
   "noData": "Sin datos",
+  "settings": "Configuración",
+  "mode": "Modo",
   "status": {
     "open": "Abierto",
     "closed": "Cerrado"
