--- a/apps/web/src/libs/i18next/locales/en.json
+++ b/apps/web/src/libs/i18next/locales/en.json
@@ -3,6 +3,8 @@
   "noData": "No data",
   "settings": "Settings",
   "mode": "Mode",
+  "unauthorized": "Unauthorized",
+  "notFound": "Not found",
   "status": {
     "open": "Open",
     "closed": "Closed"
