--- a/apps/web/src/libs/i18next/locales/en.json
+++ b/apps/web/src/libs/i18next/locales/en.json
@@ -3,7 +3,7 @@
   "settings": "Settings",
   "mode": "Mode",
   "name": "Name",
-  "bears": "Bears",
+  "amount": "Amount",
   "themeModes": {
     "light": "Light",
     "dark": "Dark",
