--- a/apps/web/src/libs/i18next/locales/en.json
+++ b/apps/web/src/libs/i18next/locales/en.json
@@ -22,6 +22,7 @@
     "label": "Actions",
     "accept": "Accept",
     "cancel": "Cancel",
+    "create": "Create",
     "edit": "Edit",
     "update": "Update"
   },
