--- a/apps/web/src/libs/i18next/locales/en.json
+++ b/apps/web/src/libs/i18next/locales/en.json
@@ -33,6 +33,8 @@
     "confirmation": "Are you sure you want to proceed?",
     "warningCreate": "Warning: This action will create a new record.",
     "warningUpdate": "Warning: This action will update the record.",
-    "warningDelete": "Warning: This action will delete the record permanently."
+    "warningDelete": "Warning: This action will delete the record permanently.",
+    "errorResponse": "An internal server error occurred.",
+    "successResponse": "Your request was processed successfully!"
   }
 }
